# gc-model

./: .gitignore  README.md  modelrc.cabal  stack.yaml
src/: Model.hs
