name:                modelrc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/modelrc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Model
  build-depends:       base >= 4.7 && < 5
                     , array >=0.5.1.1
                     , lens
                     , mtl
                     , binary
  default-language:    Haskell2010

test-suite modelrc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , modelrc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/modelrc
